@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
+	id 'org.asciidoctor.jvm.convert' version '3.3.2' // Asciidoctor 플러그인 추가
 }
 
 group = 'shop.sellution'
@@ -13,14 +14,21 @@ java {
 	}
 }
 
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+
+	asciidoctorExt
 }
 
 repositories {
 	mavenCentral()
+}
+
+ext {
+	snippetsDir = file('build/generated-snippets')
 }
 
 dependencies {
@@ -56,9 +64,41 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
-	implementation 'com.github.maricn:logback-slack-appender:1.6.1'
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc' // rest docs
+	asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor' // rest docs
+	implementation 'com.github.maricn:logback-slack-appender:1.6.1' // 슬랙 메시지 보내기
+	implementation 'org.springframework.boot:spring-boot-starter-webflux' // 외부 api 통신 [ webclient ]
 }
 
-tasks.named('test') {
+
+
+test {
+	outputs.dir snippetsDir
 	useJUnitPlatform()
 }
+
+asciidoctor {
+	forkOptions{
+		jvmArgs('--add-opens','java.base/sun.nio.ch=ALL-UNNAMED',
+				'--add-opens','java.base/java.io=ALL-UNNAMED')
+	}
+	configurations 'asciidoctorExt'
+	baseDirFollowsSourceFile()
+	inputs.dir snippetsDir
+	dependsOn test
+}
+
+tasks.register('copyDocument', Copy) {
+	dependsOn asciidoctor
+
+	from file("build/docs/asciidoc/")
+	into file("src/main/resources/static/docs")
+}
+
+
+
+
+build {
+	dependsOn copyDocument
+}
+
